Finish theory section. Start estimation w disc SRV

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -21,6 +21,26 @@
   publisher = {Springer},
   location = {Berlin, Heidelberg},
 }
+@article{Frechet1948,
+    author = {Fr\'echet, M. R.},
+    title = {Les \'el\'ements al\'eatoires de nature quelconque dans un espace distanci\'e},
+    journal = {Annales de l'institut Henri Poincar\'e},
+    pages = {215--310},
+    publisher = {INSTITUT HENRI POINCAR\'E ET GAUTHIER-VILLARS},
+    volume = {10},
+    number = {4},
+    year = {1948},
+    language = {fr}
+}
+@article{Karcher1977,
+    author={Karcher, H.},
+    title={Riemannian center of mass and mollifier smoothing},
+    year={1977},
+    journal={Communications on Pure and Applied Mathematics},
+    volume={30},
+    number={5},
+    pages={509-541}
+}
 @article{Kendall1977, 
     author={Kendall, D. G.}, 
     title={The diffusion of shape},
@@ -78,13 +98,22 @@
   archivePrefix={arXiv},
   primaryClass={stat.ME}
 }
+@Article{WangChiouMueller2016,
+  author = {Wang, J.-L. and Chiou, J.-M. and Müller, H.-G.},
+  title = {Functional Data Analysis},
+  journal = {Annual Review of Statistics and Its Application},
+  volume = {3},
+  number = {1},
+  pages = {257-295},
+  year = {2016}
+}
 @Book{Wood2017,
-    title = {Generalized Additive Models: An Introduction with R},
-    year = {2017},
-    author = {S.N Wood},
-    edition = {2},
-    publisher = {Chapman and Hall/CRC},
-  }
+  title = {Generalized Additive Models: An Introduction with R},
+  year = {2017},
+  author = {S.N Wood},
+  edition = {2},
+  publisher = {Chapman and Hall/CRC},
+}
 @Manual{digits3,
   author = {Anderson, C. R.},
   title = {Object recognition using statistical shape analysis},
